[package]
name = "Graux-Main-Rust-SDK"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ethers-providers = { version = "2.0", features = ["ws"] }
web3 = "0.10"



